[tool.poetry]
name = "auto-yuto"
version = "0.1.0"
description = ""
authors = ["rua0ra1 <icherryme.0407@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
openai = "^1.61.1"
moviepy = "^2.1.2"
google-auth = "^2.38.0"
google-auth-oauthlib = "^1.2.1"
google-auth-httplib2 = "^0.2.0"
google-api-python-client = "^2.160.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
